--- a/style.css
+++ b/style.css
@@ -1,136 +1,178 @@
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    background-color: #f1fbff;
+  background-color: #f1fbff;
 }
 
 /* CAROUSEL */
 .carousel-item {
-    height: 100vh;
-    min-height: 300px;
+  height: 100vh;
+  min-height: 300px;
 }
 
 .carousel-caption {
-    bottom: 220px;
-    z-index: 2;
+  bottom: 220px;
+  z-index: 2;
 }
 
 .carousel-caption h5 {
-    font-size: 45px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-top: 25px;
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 25px;
 }
 
 .carousel-caption p {
-    width: 60%;
-    margin: auto;
-    font-style: 18px;
-    line-height: 1.9;
+  width: 60%;
+  margin: auto;
+  font-style: 18px;
+  line-height: 1.9;
 }
 
 /* ESPELHO CAROUSEL */
 .carousel-inner::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.7);
-    z-index: 1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1;
 }
 
 /* NAVBAR */
 .navbar-nav a {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 500;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .navbar-light .navbar-brand {
-    color: #000;
-    font-size: 25px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 2px;
+  color: #000;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2px;
 }
 
 .navbar-light .navbar-brand:focus,
 .navbar-light .navbar-brand:hover {
-    color: #000;
+  color: #000;
 }
 
 .navbar-light .navbar-nav .navbar-link {
-    color: #000;
+  color: #000;
 }
 
 /* IMAGEM OCUPAR O ESPAÇO TODO */
 .w-100 {
-    height: 100%;
+  height: 100%;
 }
 
-.services .card-body i{
-    font-size: 50px;
+.services .card-body i {
+  font-size: 50px;
 }
 
 .team .card-body i {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .portfolio .card {
-    box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
+  box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
 }
 
-.team .card-body i{
-    font-size: 20px;
+.team .card-body i {
+  font-size: 20px;
 }
 
 .team .card {
-    box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
+  box-shadow: 15px 15px 40px rgba(0, 0, 0, 0.15);
 }
 
 /* ABOUT */
 .section-padding {
-    padding: 100px;
+  padding: 100px;
 }
 
 /* SERVICES */
 .card-item-services {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* GALERIA */
 .card-img-cars {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .gallery {
-    padding: 80px;
+  padding: 80px;
 }
 .gallery img {
-    padding: 15px;
-    width: 100%;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .card-img-cars {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .cards-img-cars-gallery {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .cards-img-cars-gallery:hover {
-    -moz-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-    transition: .3s;
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+
+@media only screen and (min-width: 768px) and (max-windth: 991px) {
+  .carousel-caption {
+    bottom: 370px;
+  }
+
+  .carousel-caption p {
+    width: 100%;
+  }
+
+  .card {
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .nav-bar {
+    text-align: center;
+  }
+
+  .carousel-caption {
+    bottom: 125px;
+  }
+  .carousel-caption h5 {
+    font-size: 17px;
+  }
+  .carousel-caption a {
+    padding: 10px 15px;
+  }
+  .carousel-caption p {
+    width: 100%;
+    line-height: 1.6;
+    font-size: 12px;
+  }
+  .about-text {
+    padding-top: 50px;
+  }
+  .card {
+    margin-bottom: 30px;
+  }
 }
